add new div column and unordered list as well as BLM photo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
     <p class="paragraph">Hi, I'm Sage. I am a Portland-based student at <strong><a href="http://www.epicodus.com/">Epicodus</a></strong> focusing my studies on HTML, CSS, JavaScript, C#, and React. I have a diverse background and have enjoyed careers in many different fields such as Human Resources, Veterinary Medicine, and Hospitality. Innovation and continuous learning are my passions in life and I look forward to thriving in the tech industry and helping make the web a beautiful place.</p>
 </div>
 
-
+<div>
+  <div class="column">
+    <h2 class="heading">What I Dig</h2>
+    <ul>
+      <li>History. Especially if it has to do with the World Wars or the Middle East.</li>
+      <li>Documentaries. About anything!</li>
+      <li>Diving into a good podcast or book. Any recommendations?</li>
+      <li>Making and listening to music of all kinds.</li>
+      <li>Animal rescue. Watch out for all the dog hair. Sorry!</li>
+      <li>Weird art, photography, and art history. Think George Condo and Tadanori Yokoo.</li>
+      <li>Social Justice. <em><strong><span class="blm">Black Lives Matter</span></strong></em></li>
+    </ul>
+    <img src="img/blacklivesmatter.jpg" alt="A photo of protestors in black and white with black lives matter in yellow lettering." class="image2">
+  </div>
+</div>
 
 
 </body>
