add another div column, h2, and p to show Epicodus projects

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
   </div>
 </div>
 
+<div>
+  <div class="column2">
+    <h2 class="heading">My Work</h2>
+    <p class="projects">Here is a list of what I have been working on with Epicodus so far:</p>
+  </div>
+</div>
 
 </body>
 </html>
