--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
   <div class="column2">
     <h2 class="heading">My Work</h2>
     <p class="projects">Here is a list of what I have been working on with Epicodus so far:</p>
+      <ol>
+        <li><a href="https://sagesypert.github.io/week-in-review/">Week in Review</a> - A webpage with an overview of my first week at Epicodus using HTML and Bootstrap.</li>
+        <li><a href="https://sagesypert.github.io/resort-website/">Epicodus Resort</a> - A webpage detailing descriptions of the Epicodus Resort using HTML and CSS.</li>
+      </ol>
   </div>
 </div>
 
