add two more links to epicodus projects in unordered list

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <ol>
         <li><a href="https://sagesypert.github.io/week-in-review/">Week in Review</a> - A webpage with an overview of my first week at Epicodus using HTML and Bootstrap.</li>
         <li><a href="https://sagesypert.github.io/resort-website/">Epicodus Resort</a> - A webpage detailing descriptions of the Epicodus Resort using HTML and CSS.</li>
+        <li><a href="https://sagesypert.github.io/my-next-vacation/">Italy Vacation</a> - A webpage about a vacation to Italy using HTML and Bootstrap.</li>
+        <li><a href="https://sagesypert.github.io/dog-blog/">Dog Blog</a> - A webpage to act as a dog's blog using HTML and CSS.</li>
       </ol>
   </div>
 </div>
